# episteme

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  admin_constitution.md  docker-compose.yml  drizzle.config.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml  deploy.yml
corpus/: README.md  RUBRIC.md  SCORING.md
corpus/blackholes/: expectations.json  manifest.json
corpus/blackholes/posts/: cern-lhc-safety.json  cern-lhc-safety.md  giddings-mangano-2008.json  giddings-mangano-2008.md  plaga-2008.json  plaga-2008.md  wikipedia-safety-overview.json  wikipedia-safety-overview.md
corpus/eggs/: expectations.json  manifest.json
corpus/eggs/posts/: dietary-cholesterol-debate.json  dietary-cholesterol-debate.md  harvard-nutrition-source.json  harvard-nutrition-source.md  wikipedia-egg-health.json  wikipedia-egg-health.md
corpus/lableak/: expectations.json  manifest.json
corpus/lableak/posts/: defuse-proposal.json  defuse-proposal.md  lab-leak-case.json  lab-leak-case.md  origins-debate-overview.json  origins-debate-overview.md  worobey-market-epicenter.json  worobey-market-epicenter.md  zoonosis-market-case.json  zoonosis-market-case.md
corpus/lethalities/: expectations.json  manifest.json
corpus/lethalities/posts/: 2yLyT6kB7BQvTfEuZ.json  2yLyT6kB7BQvTfEuZ.md  CoZhXrhpQxpy9xw9y.json  CoZhXrhpQxpy9xw9y.md  GNhMPAWcfBCASy8e6.json  GNhMPAWcfBCASy8e6.md  GQat3Nrd9CStHyGaq.json  GQat3Nrd9CStHyGaq.md  LDRQ5Zfqwi8GjzPYG.json  LDRQ5Zfqwi8GjzPYG.md  keiYkaeoLHoKK4LYA.json  keiYkaeoLHoKK4LYA.md  pRkFkzwKZ2zfa3R6H.json  pRkFkzwKZ2zfa3R6H.md  qJgz2YapqpFEDTLKn.md  (+7 more)
docs/: accounts.md  architecture-plan.md  architecture.md  graph-epochs.md  infrastructure.md  mcp.md  policies.md  reputation.md  troubleshooting.md
extension/: .gitignore  README.md  background.ts  package-lock.json  package.json  popup.css  popup.tsx  tsconfig.json
extension/contents/: overlay.ts
extension/lib/: anchor.ts  api.ts  settings.ts  types.ts
infra/: cdk.context.json  package-lock.json  package.json  tsconfig.json
infra/lib/: api-stack.ts  database-stack.ts  network-stack.ts  queue-stack.ts  secrets-stack.ts
scripts/: archive-legacy-claims.ts  backfill-argument-evaluations.ts  backfill-argument-written-forms.ts  recover-parked-stewards.ts  seed-extension-test.ts  sync-frontend-content.ts
scripts/corpus/: compare.ts  driver.ts  export-flf.ts  extract-only.ts  fetch.ts  judge.ts  lib.ts  metrics.ts  report.ts  reset.ts  run.ts  score.ts
src/: config.ts  index.ts
src/db/: client.ts  migrate.ts  schema.ts
src/episteme/: __init__.py  config.py
src/llm/: budget-tracker.ts  client.ts  errors.ts  models.ts  pricing.ts  usage-context.ts
src/mcp/: server.ts
src/routes/: api-keys.ts  appeals.ts  claims.ts  contributions.ts  contributors.ts  extension.ts  health.ts  jobs.ts  mcp.ts  oauth.ts  sources.ts  usage.ts  users.ts
src/schemas/: argument.ts  claim.ts  common.ts  extension.ts  governance.ts  source.ts
src/server/: app.ts  contributor-gate.ts
src/services/: api-key-service.ts  argument-service.ts  assessment-service.ts  billing-service.ts  claim-events-service.ts  claim-service.ts  contribution-service.ts  contributor-service.ts  embedding-service.ts  extension-service.ts  intake-service.ts  job-service.ts  kudos-service.ts  oauth-service.ts  queue-service.ts  reconciliation-service.ts  reputation-service.ts  search-service.ts  source-service.ts  tree-service.ts  usage-service.ts
src/workers/: arbitration-pipeline.ts  audit-pipeline.ts  audit-scheduler.ts  claim-pipeline.ts  contribution-pipeline.ts  curator-pipeline.ts  local-runner.ts  poller.ts  recovery-sweep.ts  steward-pipeline.ts  url-extraction.ts
tests/unit/: config.test.ts
web/: .env.example  auth.ts  next.config.mjs  package-lock.json  package.json
web/app/: DecompositionFigure.tsx  Mark.tsx  apple-icon.tsx  globals.css  layout.tsx  page.tsx
web/components/: ArgumentText.tsx  Assessment.tsx  AssessmentText.tsx  ClaimView.tsx  ClaimsControls.tsx  ContactForm.tsx  DecompositionTree.tsx  DocLayout.tsx  DocToc.tsx  Markdown.tsx  ProposeClaim.tsx  Term.tsx  Territories.module.css  Territories.tsx  useSuggestedClaim.ts  useViewerSession.ts
web/content/: architecture.md  constitution.md  policies.md
web/lib/: account-api.ts  api.ts  claim-links.ts  content.ts  data.ts  fixtures.ts  flf.ts  ontology.ts  territories.ts  toc.ts  types.ts
(+263 files in other folders)
